--- a/src/main/java/views/ApplicationController/index.ftl.html
+++ b/src/main/java/views/ApplicationController/index.ftl.html
@@ -1,16 +1,16 @@
-<#import "../layout/defaultLayout.ftl.html" as layout> 
-<@layout.myLayout "Home page">    
+<#import "../layout/defaultLayout.ftl.html" as layout>
+<@layout.myLayout "Home page">
 
 
-<h1>The Battleship game</h1>
+<h1 align="center">The Battleship game</h1>
 
-<table id="opponent" class="battleGrid">
+<table align="center" id="opponent" class="battleGrid" width="65%">
 </table>
 
-<table id="player" class="battleGrid">
+<table align="center" id="player" class="battleGrid" width="50%">
 </table>
 
-<ul>
+<ul align="center">
     <li><button id="place_minesweeper">Place Minesweeper</button></li>
     <li><button id="place_destroyer">Place Destroyer</button></li>
     <li><button id="place_battleship">Place Battleship</button></li>
