--- a/src/main/java/views/ApplicationController/index.ftl.html
+++ b/src/main/java/views/ApplicationController/index.ftl.html
@@ -2,20 +2,32 @@
 <@layout.myLayout "Home page">
 
 
-<h1 align="center">The Battleship game</h1>
+<h1 align="center" class="title">The Battleship game</h1>
 
-<table align="center" id="opponent" class="battleGrid" width="65%">
+<table align="center" id="opponent" class="battleGrid">
 </table>
 
-<table align="center" id="player" class="battleGrid" width="50%">
-</table>
+<div align="center" class="log"> log </div>
 
-<ul align="center">
-    <li><button id="place_minesweeper">Place Minesweeper</button></li>
-    <li><button id="place_destroyer">Place Destroyer</button></li>
-    <li><button id="place_battleship">Place Battleship</button></li>
-    <li><input type="checkbox" id="is_vertical">Vertical</input></li>
-</ul>
+<table align="center" id="player" class="battleGrid">
+</table>
+<div align="center" class="button_container">
+    <div class="buttons">
+        <ul>
+            <li><button class="button" id="place_minesweeper">Place Minesweeper</button></li>
+            <li><button class="button" id="place_destroyer">Place Destroyer</button></li>
+            <li><button class="button" id="place_battleship">Place Battleship</button></li>
+            <li><input type="checkbox" id="is_vertical">Vertical</input></li>
+        </ul>
+    </div>
+    <div class="buttons">
+        <ul>
+            <li><button class="button" id="attack_button">ATTACK</button></li>
+            <li><button class="button" id="surrender_button">SURRENDER</button></li>
+        </ul>
+    </div>
+</div>
+
 
 <script type="text/javascript" src="/assets/game.js"></script>
 <script>
