--- a/src/main/java/views/ApplicationController/index.ftl.html
+++ b/src/main/java/views/ApplicationController/index.ftl.html
@@ -7,7 +7,10 @@
 <table id="opponent" class="battleGrid">
 </table>
 
-<div class="log"> log </div>
+<div class="log">
+    <div id="logText"> Log </div>
+
+</div>
 
 <table id="player" class="battleGrid">
 </table>
