added js for coloring sunken ships red, changed checkbox to look nicer, fixed a typo in the game title

--- a/src/main/java/views/ApplicationController/index.ftl.html
+++ b/src/main/java/views/ApplicationController/index.ftl.html
@@ -2,7 +2,7 @@
 <@layout.myLayout "Home page">
 
 
-<h1 class="title">The Battleship game</h1>
+<h1 class="title">The Battleship Game</h1>
 
 <table id="opponent" class="battleGrid">
 </table>
@@ -17,10 +17,10 @@
 <div class="button_container">
     <div class="buttons">
         <ul>
-         <li><button class="button" id="place_minesweeper">Place Minesweeper</button></li>
-         <li><button class="button" id="place_destroyer">Place Destroyer</button></li>
-         <li><button class="button" id="place_battleship">Place Battleship</button></li>
-            <li><input type="checkbox" id="is_vertical">Vertical</input></li>
+            <li><button class="button" id="place_minesweeper">Place Minesweeper</button></li>
+            <li><button class="button" id="place_destroyer">Place Destroyer</button></li>
+            <li><button class="button" id="place_battleship">Place Battleship</button></li>
+            <li class="checkbox_container"><input type="checkbox" id="is_vertical">Vertical</input></li>
          </ul>
     </div>
     <div class="buttons">
