--- a/src/main/java/assets/css/custom.css
+++ b/src/main/java/assets/css/custom.css
@@ -99,3 +99,15 @@ ul {
 .hide {
     display: none;
 }
+
+.checkbox_container {
+     background-color: #555555;
+     border: none;
+     color: white;
+     padding: 10px 20px;
+     text-align: center;
+     text-decoration: none;
+     display: inline-block;
+     font-size: 16px;
+     margin: 2px 2px;
+}
