included a message when not on a ipad or ipad pro screen

--- a/src/main/java/assets/css/custom.css
+++ b/src/main/java/assets/css/custom.css
@@ -1,6 +1,17 @@
 /* Add additional stylesheets below
 -------------------------------------------------- */
 
+/* Ipad portrait media queries 768x1024*/
+@media only screen
+and (min-device-width : 768px)
+/*ipad pro screen: 1024x1336 */
+and (max-device-width : 1336px)
+and (orientation : portrait) { /* STYLES GO HERE */
+    .message{
+        display: none;
+    }
+}
+
 .title {
     text-align: center;
     font-size: 25px;
