--- a/src/main/java/views/ApplicationController/index.ftl.html
+++ b/src/main/java/views/ApplicationController/index.ftl.html
@@ -1,6 +1,10 @@
 <#import "../layout/defaultLayout.ftl.html" as layout>
 <@layout.myLayout "Home page">
 
+<div align="center" class="message sink">
+    <h3>Notice!</h3>
+    <p>This sight works best on the iPad screen.</p>
+</div>
 
 <h1 align="center" class="title">The Battleship game</h1>
 
