Capitalized the G in the title

--- a/src/main/java/views/ApplicationController/index.ftl.html
+++ b/src/main/java/views/ApplicationController/index.ftl.html
@@ -6,7 +6,7 @@
     <p>This sight works best on the iPad screen.</p>
 </div>
 
-<h1 align="center" class="title">The Battleship game</h1>
+<h1 align="center" class="title">The Battleship Game</h1>
 
 <table align="center" id="opponent" class="battleGrid">
 </table>
