added notice class to the ipad notice

--- a/src/main/java/views/ApplicationController/index.ftl.html
+++ b/src/main/java/views/ApplicationController/index.ftl.html
@@ -1,7 +1,7 @@
 <#import "../layout/defaultLayout.ftl.html" as layout>
 <@layout.myLayout "Home page">
 
-<div align="center" class="message sink">
+<div align="center" class="message sink" id="notice">
     <h3>Notice!</h3>
     <p>This sight works best on the iPad screen.</p>
 </div>
