need ignore cap

--- a/src/main/java/assets/css/custom.css
+++ b/src/main/java/assets/css/custom.css
@@ -57,6 +57,14 @@ td:hover {
     background-color: blue;
 }
 
+.empty {
+    background-color: gray;
+}
+
+.hasShip{
+    background-color: black;
+}
+
 .log {
     width: 620px;
     margin: auto;
