need igore block

--- a/src/main/java/assets/css/custom.css
+++ b/src/main/java/assets/css/custom.css
@@ -56,6 +56,13 @@ td:hover {
 .miss {
     background-color: blue;
 }
+.empty {
+    background-color: gray;
+}
+
+.hasShip{
+    background-color: black;
+}
 
 .log {
     width: 620px;
