--- a/src/main/java/views/ApplicationController/index.ftl.html
+++ b/src/main/java/views/ApplicationController/index.ftl.html
@@ -30,6 +30,7 @@
         <ul>
          <li><button class="button" id="attack_button">ATTACK</button></li>
          <li><button class="button" id="surrender_button">SURRENDER</button></li>
+            <li><button class="button hide" id="sonarPulse_button">SONAR PULSE</button></li>
         </ul>
     </div>
 </div>
