add sonar pulse counter

--- a/src/main/java/views/ApplicationController/index.ftl.html
+++ b/src/main/java/views/ApplicationController/index.ftl.html
@@ -31,6 +31,7 @@
          <li><button class="button" id="attack_button">ATTACK</button></li>
          <li><button class="button" id="surrender_button">SURRENDER</button></li>
             <li><button class="button hide" id="sonarPulse_button">SONAR PULSE</button></li>
+            <li class="counter hide" id="sonarPulse_counter"> SONAR PULSE REMAIN: 2 </li>
         </ul>
     </div>
 </div>
