added bootstrap js alert informing users of new features.

--- a/src/main/java/views/ApplicationController/index.ftl.html
+++ b/src/main/java/views/ApplicationController/index.ftl.html
@@ -6,6 +6,13 @@
     <p>This sight works best on the iPad screen.</p>
 </div>
 
+
+<div class="alert alert-info alert-dismissible fade in">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>New!</strong> Introducing the captains quarter and sonar pulse! Attack the captains quarter to sink ships
+    faster or use the sonar pulse to reveal a portion of the map after sinking one ship.
+</div>
+
 <h1 align="center" class="title">The Battleship Game</h1>
 
 <table align="center" id="opponent" class="battleGrid">
