fixed spelling error

--- a/src/main/java/views/ApplicationController/index.ftl.html
+++ b/src/main/java/views/ApplicationController/index.ftl.html
@@ -3,7 +3,7 @@
 
 <div align="center" class="message sink" id="notice">
     <h3>Notice!</h3>
-    <p>This sight works best on the iPad screen.</p>
+    <p>This site works best on the iPad screen.</p>
 </div>
 
 
