--- a/src/main/java/views/ApplicationController/index.ftl.html
+++ b/src/main/java/views/ApplicationController/index.ftl.html
@@ -39,6 +39,12 @@
          <li><button class="button" id="surrender_button">SURRENDER</button></li>
             <li><button class="button hide" id="sonarPulse_button">SONAR PULSE</button></li>
             <li class="counter hide" id="sonarPulse_counter"> SONAR PULSE REMAIN: 2 </li>
+            <li class="mov-group hide" id="move">
+                <button class="button" id="mov-n">▲</button>
+                <button class="button" id="mov-s">▼</button>
+                <button class="button" id="mov-e">◄</button>
+                <button class="button" id="mov-w">►</button>
+            </li>
         </ul>
     </div>
 </div>
