--- a/src/main/java/views/ApplicationController/index.ftl.html
+++ b/src/main/java/views/ApplicationController/index.ftl.html
@@ -30,6 +30,7 @@
             <li><button class="button" id="place_minesweeper">Place Minesweeper</button></li>
             <li><button class="button" id="place_destroyer">Place Destroyer</button></li>
             <li><button class="button" id="place_battleship">Place Battleship</button></li>
+            <li><button class="button" id="place_submarine">Place Submarine</button></li>
             <li class="checkbox_container"><input type="checkbox" id="is_vertical">Vertical</input></li>
          </ul>
     </div>
