grammar update on notification

--- a/src/main/java/views/ApplicationController/index.ftl.html
+++ b/src/main/java/views/ApplicationController/index.ftl.html
@@ -11,7 +11,7 @@
     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
     <strong>New!</strong> Introducing the captains quarter and sonar pulse! Attack the captains quarter to sink ships
     faster or use the sonar pulse to reveal a portion of the map after sinking one ship. A new ship the submarine has
-    also been added. Submarines become submerged when they are placed overlapping with another ship. Submerged submarines
+    also been added. Submarines become submerged when they are placed with squares overlapping another ship's squares. Submerged submarines
     can only be hit by the space laser, which you automatically get after sinking one enemy ship. Lastly, after sinking 
     two enemy ships, you can command your fleet to move one square in a cardinal direction twice.
 </div>
